--- a/edit/fedinterop/idp.adoc
+++ b/edit/fedinterop/idp.adoc
@@ -32,7 +32,7 @@ _Note that ForceAuthn is most commonly used for privilege escalation or to initi
 
 === Enhanced Client or Proxy
 
-[IIP-IDP13]:: Identity Providers MUST support the SAML V2.0 Enhanced Client or Proxy Profile Version 2.0 <<SAML2ECP>>. Full conformance is OPTIONAL, but implementations MUST support "Bearer" subject confirmation and verification of channel bindings.  All applicable Web Browser SSO requirements in this profile apply, excepting IIP-SSO02 and IIP-SSO03 since those bindings do not apply to the use of ECP.
+[IIP-IDP13]:: Identity Providers MUST support the SAML V2.0 Enhanced Client or Proxy Profile Version 2.0 <<SAML2ECP>>. Full conformance is OPTIONAL, but implementations MUST support "Bearer" subject confirmation and verification of channel bindings.  All applicable Web Browser SSO requirements in this profile apply, excepting IIP-SSO02 and IIP-SSO03 since those bindings do not apply to the use of ECP.  This requirement does not apply to token translation Proxies.
 
 [IIP-IDP14]:: Identity Providers MUST support the use of HTTP Basic Authentication [RFC2617] to authenticate the user agent. Other forms of authentication MAY be supported.
 
