--- a/edit/fedinterop/algorithms.adoc
+++ b/edit/fedinterop/algorithms.adoc
@@ -3,18 +3,10 @@
 [IIP-ALG01]:: Implementations MUST support the digest algorithms identified by the following URIs in conjunction with the creation and verification of XML Signatures <<XMLSig>>:
 
 * ```http://www.w3.org/2001/04/xmlenc#sha256``` <<XMLEnc>>
-* ```http://www.w3.org/2000/09/xmldsig#sha1``` <<XMLSig>>
- +
- +
-Implementations MUST NOT default to the use of ```http://www.w3.org/2000/09/xmldsig#sha1```.
 
-[IIP-ALG02]:: Implementations MUST support the signing algorithms identified by the following URIs in conjunction with the creation and verification of XML Signatures <<XMLSig>>:
+[IIP-ALG02]:: Implementations MUST support the signature algorithms identified by the following URIs in conjunction with the creation and verification of XML Signatures <<XMLSig>>:
 
 * ```http://www.w3.org/2001/04/xmldsig-more#rsa-sha256``` <<RFC4051>>
-* ```http://www.w3.org/2000/09/xmldsig#rsa-sha1``` <<XMLSig>>
- +
- +
-Implementations MUST NOT default to the use of ```http://www.w3.org/2000/09/xmldsig#rsa-sha1```.
 
 [IIP-ALG03]:: Implementations SHOULD support the signature algorithms identified by the following URIs in conjunction with the creation and verification of XML Signatures <<XMLSig>>:
 
@@ -22,12 +14,17 @@ Implementations MUST NOT default to the use of ```http://www.w3.org/2000/09/xmld
 
 [IIP-ALG04]:: Implementations MUST support the block encryption algorithms identified by the following URIs in conjunction with the use of XML Encryption <<XMLEnc>>:
 
-* ```http://www.w3.org/2001/04/xmlenc#aes128-cbc``` <<XMLEnc>>
-* ```http://www.w3.org/2001/04/xmlenc#aes256-cbc``` <<XMLEnc>>
 * ```http://www.w3.org/2009/xmlenc11#aes128-gcm``` <<XMLEnc11>>
 * ```http://www.w3.org/2009/xmlenc11#aes256-gcm``` <<XMLEnc11>>
 
-[IIP-ALG05]:: Implementations MUST support the key transport algorithms identified by the following URIs in conjunction with the use of XML Encryption <<XMLEnc>>:
+[IIP-ALG05]:: Implementations MAY support the block encryption algorithms identified by the following URIs in conjunction with the use of XML Encryption <<XMLEnc>> for backwards compatibility:
+
+* ```http://www.w3.org/2001/04/xmlenc#aes128-cbc``` <<XMLEnc>>
+* ```http://www.w3.org/2001/04/xmlenc#aes256-cbc``` <<XMLEnc>>
+
+The use of these algorithms is widespread at the time of authoring, but is known to be broken <<XMLEncBreak>> and should be avoided in new applications. Implementations supporting them SHOULD warn on use.
+
+[IIP-ALG06]:: Implementations MUST support the key transport algorithms identified by the following URIs in conjunction with the use of XML Encryption <<XMLEnc>>:
 
 * ```http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p``` <<XMLEnc>>
 * ```http://www.w3.org/2009/xmlenc11#rsa-oaep``` <<XMLEnc11>> + 
@@ -38,5 +35,4 @@ The following DigestMethod algorithms MUST be supported for both of the above ke
  +
 The default mask generation function (MGF1 with SHA1) MUST be supported for the KeyTransport algorithm identified by ```http://www.w3.org/2009/xmlenc11#rsa-oaep```.
 
-
-[IIP-ALG06]:: This document is not normative with respect to TLS security. It is, however, RECOMMENDED that implementers consider <<RFC7457>> and current best practice reflected in documents such as <<BetterCrypto>>.
+[IIP-ALG07]:: This document is not normative with respect to TLS security. It is, however, RECOMMENDED that implementers consider <<RFC7457>> and current best practice reflected in documents such as <<BetterCrypto>>.
