--- a/edit/fedinterop/idp.adoc
+++ b/edit/fedinterop/idp.adoc
@@ -2,33 +2,33 @@
 
 === Web Browser SSO
 
-[IIP-IDP01]:: Identity Providers MUST support the generation of `<saml2:Attribute>` elements containing any arbitrary **xs:string** value in the `Name` attribute and any arbitrary **xs:anyURI** value in the `NameFormat` attribute.
+[IIP-IDP01]:: Identity Providers MUST support the generation of `<saml:Attribute>` elements containing any arbitrary **xs:string** value in the `Name` attribute and any arbitrary **xs:anyURI** value in the `NameFormat` attribute.
 
 [IIP-IDP02]:: Identity Providers MUST be capable of determining whether or not to include specific SAML attributes (or specific values) in a response based on the the entityID of the relying party.
 
 [IIP-IDP03]:: Identity Providers MUST be capable of determining whether or not to include specific SAML attributes (or specific values) in a response based on the presence of `<mdattr:EntityAttributes>` extension elements <<MetaAttr>> found in the metadata for a relying party.
 
-[IIP-IDP04]:: Identity Providers MUST be capable of determining whether or not to include specific SAML attributes (or specific values) in a response based on the presence of `<md:AttributeConsumingService>` elements (containing `<md:RequestedAttribute>` elements) found in the metadata for a relying party, including the value of the enclosed `isRequired` XML attribute. Accordingly, they MUST support the `AttributeConsumingServiceIndex` attribute in `<saml2p:AuthnRequest>` messages as a means of determining the appropriate `<md:AttributeConsumingService>` element to process.
+[IIP-IDP04]:: Identity Providers MUST be capable of determining whether or not to include specific SAML attributes (or specific values) in a response based on the presence of `<md:AttributeConsumingService>` elements (containing `<md:RequestedAttribute>` elements) found in the metadata for a relying party, including the value of the enclosed `isRequired` XML attribute. Accordingly, they MUST support the `AttributeConsumingServiceIndex` attribute in `<samlp:AuthnRequest>` messages as a means of determining the appropriate `<md:AttributeConsumingService>` element to process.
 
 _<md:RequestedAttribute> elements in metadata can be used to help automate attribute release configurations in IdP deployments. An IdP could, for instance, be configured to release attributes requested in metadata, typically in combination with other criteria. Example criteria include the acquisition of user consent and/or the presence of a particular qualifying entity attribute (see IIP-IDP04) for the relying party._
 
-[IIP-IDP05]:: Identity Providers MUST support the issuance of `<saml2p:Response>` messages (with appropriate status codes) in the event of an error condition, provided that the user agent remains available and an acceptable location to which to deliver the response is known. The criteria for "acceptability" of a response location are not formally specified, but are subject to Identity Provider policy and reflect its responsibility to protect users from being sent to untrusted or possibly malicious parties.
+[IIP-IDP05]:: Identity Providers MUST support the issuance of `<samlp:Response>` messages (with appropriate status codes) in the event of an error condition, provided that the user agent remains available and an acceptable location to which to deliver the response is known. The criteria for "acceptability" of a response location are not formally specified, but are subject to Identity Provider policy and reflect its responsibility to protect users from being sent to untrusted or possibly malicious parties.
 
-[IIP-IDP06]:: Identity Providers MUST support the `ForceAuthn` attribute in `<saml2p:AuthnRequest>` messages as defined in <<SAML2Core>>. The authentication mechanisms within an implementation MUST have access to the ForceAuthn indicator so that their behavior may be influenced by its value.
+[IIP-IDP06]:: Identity Providers MUST support the `ForceAuthn` attribute in `<samlp:AuthnRequest>` messages as defined in <<SAML2Core>>. The authentication mechanisms within an implementation MUST have access to the ForceAuthn indicator so that their behavior may be influenced by its value.
 
 _Note that ForceAuthn is most commonly used for privilege escalation or to initiate explicit user approval for an action. When using forms-based username/password authentication, this is typically accomplished by re-prompting the user for credentials. When more sophisticated authentication schemes are employed (certificates, hard tokens, GSS-API), it is less clear what the correct ForceAuthn behavior should be. Thus, in addition to following_ <<SAML2Core>>, _implementations should allow for the authentication process to be modified based on the existence of ForceAuthn in a request. This provides the necessary flexibility for specific needs to be met._
 
-[IIP-IDP07]:: Identity Providers MUST support the `IsPassive` attribute in `<saml2p:AuthnRequest>` messages as defined in <<SAML2Core>>.
+[IIP-IDP07]:: Identity Providers MUST support the `IsPassive` attribute in `<samlp:AuthnRequest>` messages as defined in <<SAML2Core>>.
 
-[IIP-IDP08]:: Identity Providers MUST support the `<saml2:RequestedAuthnContext>` *exact* comparison method in `<saml2p:AuthnRequest>` messages as defined in <<SAML2Core>>.
+[IIP-IDP08]:: Identity Providers MUST support the `<saml:RequestedAuthnContext>` *exact* comparison method in `<samlp:AuthnRequest>` messages as defined in <<SAML2Core>>.
 
 [IIP-IDP09]:: Identity Providers MUST support encryption of assertions. Support for encryption of identifiers and attributes is OPTIONAL.
 
-[IIP-IDP10]:: Identity Providers MUST support the `<saml2p:NameIDPolicy>` element in `<saml2p:AuthnRequest>` messages as defined in <<SAML2Core>>.
+[IIP-IDP10]:: Identity Providers MUST support the `<samlp:NameIDPolicy>` element in `<samlp:AuthnRequest>` messages as defined in <<SAML2Core>>.
 
-[IIP-IDP11]:: Identity Providers MUST be capable of generating `<saml2:Assertion>` elements without a `<saml2:NameID>` element in the `<saml2:Subject>` element.
+[IIP-IDP11]:: Identity Providers MUST be capable of generating `<saml:Assertion>` elements without a `<saml:NameID>` element in the `<saml:Subject>` element.
 
-[IIP-IDP12]:: Identity Providers MUST support the `AssertionConsumerServiceURL`, `ProtocolBinding`, and `AssertionConsumerServiceIndex` attributes in `<saml2p:AuthnRequest>` messages for the identification of the response endpoint and binding, as defined in <<SAML2Core>>.
+[IIP-IDP12]:: Identity Providers MUST support the `AssertionConsumerServiceURL`, `ProtocolBinding`, and `AssertionConsumerServiceIndex` attributes in `<samlp:AuthnRequest>` messages for the identification of the response endpoint and binding, as defined in <<SAML2Core>>.
 
 === Enhanced Client or Proxy
 
@@ -46,7 +46,7 @@ _Note that ForceAuthn is most commonly used for privilege escalation or to initi
 
 [IIP-IDP18]:: Identity Providers MUST support the HTTP-Redirect binding for logout requests and responses.
 
-[IIP-IDP19]:: Identity Providers MUST support decryption of `<saml2:EncryptedID>` elements in logout requests. In order to fully support key rollover, Identity Providers MUST be configurable with at least two decryption keys. When decrypting encrypted identifiers, they MUST attempt to use each decryption key (in unspecified order) until the identifier is successfully decrypted or there are no more keys, in which case decryption fails.
+[IIP-IDP19]:: Identity Providers MUST support decryption of `<saml:EncryptedID>` elements in logout requests. In order to fully support key rollover, Identity Providers MUST be configurable with at least two decryption keys. When decrypting encrypted identifiers, they MUST attempt to use each decryption key (in unspecified order) until the identifier is successfully decrypted or there are no more keys, in which case decryption fails.
 
 [IIP-IDP20]:: Identity Providers MUST support the consumption of peer configuration values from SAML metadata, without additional inputs or separate configuration, for any element listed in the "Use of Metadata" section for the Single Logout Profile in <<SAML2Prof>> (section 4.4.5).
 
