--- a/edit/fedinterop/notation.adoc
+++ b/edit/fedinterop/notation.adoc
@@ -4,8 +4,8 @@ This specification uses normative text to describe the implementation of SAML so
 
 Conventional XML namespace prefixes are used throughout the listings in this specification to stand for their respective namespaces as follows, whether or not a namespace declaration is present in the example:
 
-* The prefix saml2: stands for the SAML 2.0 assertion namespace, urn:oasis:names:tc:SAML:2.0:assertion
-* The prefix saml2p: stands for the SAML 2.0 protocol namespace, urn:oasis:names:tc:SAML:2.0:protocol
+* The prefix saml: stands for the SAML 2.0 assertion namespace, urn:oasis:names:tc:SAML:2.0:assertion
+* The prefix samlp: stands for the SAML 2.0 protocol namespace, urn:oasis:names:tc:SAML:2.0:protocol
 * The prefix md: stands for the SAML 2.0 metadata namespace, urn:oasis:names:tc:SAML:2.0:metadata
 * The prefix mdattr: stands for the Metadata Extension for Entity Attributes Version 1.0 namespace, <<MetaAttr>> urn:oasis:names:tc:SAML:metadata:attribute
 
