--- a/edit/saml2int/main.adoc
+++ b/edit/saml2int/main.adoc
@@ -1,5 +1,4 @@
 = SAML V2.0 Interoperability Deployment Profile
-SAML2int profile v0.2.1
 :numbered:
 :toc:
 :toc-placement: preamble
@@ -9,12 +8,12 @@ SAML2int profile v0.2.1
 // did not manage to CSS-select the top-level title: instead using :notitle: plus following pass-though
 ++++
 <h1 style="color: blue; text-align: center; font-size: 150%; margin-bottom: 2em; font-weight: bold;">
-SAML V2.0 Interoperability Deployment Profile
+SAML V2.0 Interoperability Deployment Profile V1.0 (Draft)
 </h1>
 ++++
 
 .Required Information
-Document identifier: `http://saml2int.org/profile`
+Document identifier: TBD
 
 include::introduction.adoc[]
 
